<resources>
    <string name="app_name">Just Java</string>
    <string name="name_hint">Enter Your Name</string>
    <string name="toppings">TOPPINGS</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="price">PRICE</string>
    <string name="dollar_zero">$0</string>
    <string name="order">ORDER</string>
    <string name="just_java_order_for">Just Java Order for </string>

    <!--strings for the order summary(os) -->

</resources>
