<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:context="com.example.arpanmaheshwari.justjava.MainActivity"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/name_edit_text_view"
                style="@style/headings"
                android:hint="@string/name_hint"
                android:inputType="text"
                />

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/toppings"
                android:layout_margin="8dp"/>


            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/whipped_cream_checkbox_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:checked="false"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:text="@string/whipped_cream"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16sp"
                />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/chocolate_checkbox_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:checked="false"
                android:paddingEnd="24dp"
                android:paddingStart="24dp"
                android:text="@string/chocolate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16sp"
                />
            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/quantity"
                android:layout_margin="8dp"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/minus_button_view"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:onClick="decrement"
                    android:text="@string/minus"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="8dp"
                    android:layout_toEndOf="@id/minus_button_view"
                    android:text="@string/zero"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:layout_toEndOf="@id/quantity_text_view"
                    android:onClick="increment"
                    android:text="@string/plus"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"

                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/order_summary_text_view"
                style="@style/HeaderTextStyle"
                android:text="@string/price"
                android:layout_margin="8dp"
                />

            <TextView
                android:id="@+id/price_text_view"
                style="@style/headings"
                android:text="@string/dollar_zero"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="submitOrder"
                android:padding="8dp"
                android:text="@string/order"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>


        </LinearLayout>

    </LinearLayout>
</ScrollView>